<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/base_dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_container"
    android:orientation="vertical"
    android:padding="@dimen/base_dialog_padding">

    <ImageView
        android:id="@+id/mainIcon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_dialog_icon_height"
        android:layout_gravity="center"
        android:contentDescription="@string/main_icon_desc"
        android:src="@drawable/ic_category"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/main_dialog_title_padding_vertical"
        android:text="@string/categories_dialog_main_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/dialog_radio_nested_scroll_view_height"
        android:layout_height="@dimen/dialog_radio_nested_scroll_view_height"
        android:layout_marginVertical="@dimen/dialog_radio_nested_scroll_view_margin_vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveButton"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/positive_button_title" />

    </FrameLayout>

</LinearLayout>